Fixing registerbuttons on mobile

--- a/assets/_sass/_sections.scss
+++ b/assets/_sass/_sections.scss
@@ -36,6 +36,8 @@ section {
 		box-shadow: 0px 2px 5px rgba(0,0,0,0.5);
 		color: #fff;
 		padding: 0.5em 1em;
+		    display: inline-block;
+    margin-bottom: 0.5em;
 	}
 
 	table {
